# schiffe_versenken_rust

./: Cargo.toml  README.md  gdb.sh
slides/: Battleships.tex  Battleships.vrb  Makefile
src/: display.rs  game.rs  gameboard.rs  main.rs  ships.rs
src/network/: mod.rs  packets.rs
stm32f7-discovery/src/: lib.rs
stm32f7-discovery/src/ethernet/: init.rs  mod.rs  phy.rs
stm32f7-discovery/src/lcd/: mod.rs
