[package]
name = "rustPraktikum"
version = "0.1.0"
authors = ["itaton <stefan.gapp@t-online.de>", "sgufler <s.gufler@online.de>", "deshiJo <joachim.muessig@gmx.de"]
edition = "2018"

[dependencies]
cortex-m= "0.5.0"
alloc-cortex-m= "0.3.4"
cortex-m-rt= "0.6.4"
cortex-m-semihosting= "0.3.0"
[patch.crates-io.cortex-m-rt]
git = "https://github.com/rust-embedded/cortex-m-rt.git"
[dependencies.stm32f7-discovery]
git = "https://github.com/embed-rs/stm32f7-discovery.git"
[dependencies.stm32f7]
version= "0.3.2"
features= ["stm32f7x6", "rt"]

[profile.release]
lto = true
